--- a/views/home.jade
+++ b/views/home.jade
@@ -26,16 +26,20 @@ include carousel
   .philosophy
     .container
       img(src="/img/bg-module-top-shadow.png")
-      h1 Our Philosophy of Harmony between Machine and Support 
+      h1 Our Philosophy
       .row
         .span10.offset1
           img.rb(src="/img/RB-icon.png")
           p.
-            To serve our customers, we believe that a harmony must exist between 
-            machine and support. A perfectly performing machine is not our end goal 
-            because a machine without support does not create peace of mind. 
-            Our desire is for you to feel a calm about any machine purchased from us.
-            You will know that our ever present support is always there for you.
-            This combination of the finest machines and superior support is 
-            the rock upon which we build Rosito Bisani Imports. We are excited to serve
-            you next.
+            We believe that success is built upon a foundation of quality 
+            products and strong relationships. Whether it’s equipment, 
+            technical support, or customer service, we know that YOU, the 
+            customer, depend on us to offer value in each and every solution 
+            that we provide.  We feel that Knowledge, Passion, Trust, 
+            Communication, and Positive Energy are some of the key elements 
+            necessary to establish a prosperous working relationship. With a 
+            focus on these core values, we know that we will deliver solutions 
+            to your challenges and help your business grow. It is through this 
+            consistent recipe that we will constantly strengthen our relationship 
+            and be the obvious source for all of your specialty food service 
+            equipment needs…today, tomorrow, and beyond.
