--- a/views/section2.jade
+++ b/views/section2.jade
@@ -1,51 +1,73 @@
 .section2
-  .divider
-    .container
-      .row
-        .span6
-          .content.testimonials
-            .header
-              img(class="chat-icon", src="/img/chat-icon.png")
-              h2  What our customers are saying
-            .body
-              blockquote.
-                <b class="quotes">&ldquo;</b>
-                 Rosito Bisani has done an outstanding job in handling 
-                our specialty coffee program needs. Great equipment and great 
-                service!
-                <br />- <b>Bruxie</b>
-              blockquote.
-                <b class="quotes">&ldquo;</b>
-                Our espresso machine needed service at 4:30pm on a Friday 
-                afternoon over the holidays during ‘Grinchmas’, our largest 
-                event of the year. Leo arrived within the hour, and not only 
-                fixed our machine, but stayed for an additional hour to make 
-                sure everything ran smoothly during our event. Now that is 
-                customer service!
-                <br />- <b>Universal Studios</b>
-              blockquote.
-                <b class="quotes">&ldquo;</b>
-                We have been working with Rosito Bisani for almost 15 years. 
-                They have done a great job in providing great espresso equipment 
-                and excellent service to our customers all over the country.
-                <br />- <b>USF</b>
-             
-        .span6
-          .content.current-events
-            .header
-              img(class="news-icon", src="/img/news-icon.png")
-              h2 Current Events
-            .body
-              p <b>NRA Show</b> 
-              p May 18-21 - McCormick Place, Booth 233 - Chicago, IL
-              p <b>Western Foodservice and Hospitality Expo</b> 
-              p August 18-20 - Los Angeles Convention Center - Los Angeles, CA
-              h3 Tweets
-              p.
-                Tuesdays are typically our biggest roasting days, over 800lbs 
-                today <a>#roasting #coffee #goodday #fb</a> 05:57:40 AM April 30, 2013 
-                from Twitter for iPhone
-              p.
-                Sidamo Kellensoo getting ready to be part of Smart Blend @ One 
-                Village Coffee World HQ <a>http://t.co/DMC2huVVkZ</a> 07:47:00 AM April 22, 2013 from Instagram         
+  .container
+    .row
+      .span7
+        .testimonials
+          .header
+            img(class="chat-icon", src="/img/chat-icon.png")
+            h2  What Our Customers Are Saying...
+          .body
+            blockquote.
+              <b class="quotes">&ldquo;</b>
+              In 2008 Jeff, the service manager in the East, TWICE delivered 
+              and installed espresso machines for us (with some assistance from 
+              our staff) while on crutches just 1 week after surgery to repair his 
+              torn achilles tendon. It was the night before our grand opening, and 
+              we had a shipping delay with the espresso equipment vendor we 
+              were working with at the time.  Coincidentally this happened to 
+              2 of our locations within the same week! On both occasions, RBE 
+              acted quickly and ensured we had equipment at both locations in 
+              time for our openings. Needless to say, we have been working 
+              with these guys ever since!
+              <br />- <b class="quote-from">Spencer Curtiss - Operations Manager  
+              <br /><a href="http://saxbyscoffee.com">Saxbys Coffee</a></b>
+            //blockquote.
+              <b class="quotes">&ldquo;</b>
+              Rosito Bisani has done an outstanding job in handling 
+              our specialty coffee program needs. Great equipment and great 
+              service!
+              <br />- <b><a href="#">Bruxie</a></b>
+            blockquote.
+              <b class="quotes">&ldquo;</b>
+              Our espresso machine needed service at 4:30pm on a Friday 
+              afternoon over the holidays during ‘Grinchmas’, our largest 
+              event of the year. Leo arrived within the hour, and not only 
+              fixed our machine, but stayed for an additional hour to make 
+              sure everything ran smoothly during our event. Now that is 
+              customer service!
+              <br />- <b class="quote-from">Roy Nakano - Director of Facilities and Distribution, Revenue Operations
+              <br /><a href="#">Universal Studios</a></b>
+            blockquote.
+              <b class="quotes">&ldquo;</b>
+              We have been working with Rosito Bisani for almost 15 years. 
+              They have done a great job in providing great espresso equipment 
+              and excellent service to our customers all over the country.
+              <br />- <b class="quote-from"><a href="#">USF</a></b>
+      .span5
+        .current-events
+          //img(src="/img/circle.png", class="circle-icon")
+          .header
+            img(class="news-icon", src="/img/news-icon.png")
+            h2 Current Events
+          .body
+            h4 Upcoming Shows
+            p.
+              <b><a href="http://show.restaurant.org/Home">NRA Show</a></b> <br />May 18-21 - 
+              McCormick Place, Booth 233 <br />Chicago, IL 
+            p.
+              <b><a href="http://www.westernfoodexpo.com/For-Exhibitors/Already-Exhibiting/Space-Selection/">Western 
+                Foodservice and Hospitality Expo</a></b> <br /> August 18-20 - Los Angeles Convention Center <br />Los Angeles, CA
+            h4 Social Media
+            p.
+              <img src="/img/facebook-icon.png" class="facebook-icon" /> 
+              <a href="https://www.facebook.com/RositoBisani">Visit our Facebook page</a>
+        //img(src="/img/bg-module-top-shadow.png")
+        .testimonials.second
+          .body
+            blockquote.
+              <b class="quotes">&ldquo;</b>
+              The most important pieces of equipment in our kitchen were 
+              purchased from Rosito Bisani. Our pasta business relies on the 
+              CPG2 and TR110 and we couldn’t be happier!
+              <br />- <b class="quote-from"><a href="#">Terroni</a></b>
 
