--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7961,6 +7961,18 @@ h2,
 h3 {
   line-height: 1.3;
 }
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+body {
+  min-height: 100%;
+  position: relative;
+}
+#app {
+  padding-bottom: 70px;
+}
 #alert {
   position: fixed;
   left: 50%;
@@ -7998,6 +8010,9 @@ h3 {
 }
 #alert .error .close {
   color: #E73E36;
+}
+form .btn {
+  display: block;
 }
 /* ==========================================================================
    Contact Page 
@@ -8150,6 +8165,24 @@ form span.error {
   color: #fff;
   text-shadow: none;
 }
+.navbar .contact-numbers {
+  list-style: none;
+  color: #fff;
+  padding-left: 32px;
+  margin-top: 14px;
+}
+.navbar .user-menu {
+  margin-top: 15px;
+  margin-left: 30px;
+}
+.user-menu .btn {
+  float: left;
+}
+.navbar .user-menu li a {
+  padding: 10px;
+  font-size: 13px;
+  color: #111;
+}
 /* ==========================================================================
    Carousel 
    ========================================================================== */
@@ -8170,89 +8203,17 @@ form span.error {
   opacity: 0.5;
   filter: alpha(opacity=50);
 }
-#icons-left section {
-  text-align: center;
-  margin-top: 20px;
-}
-#icons-left section h1 {
-  font-family: SinaNova, arial;
-  font-family: Quicksand-Book, arial;
-  font-family: Nexa-Bold, arial;
-  font-family: Asap, arial;
-  font-family: LinuxLibertine;
-  font-weight: normal;
-  font-size: 44px;
-}
-#icons-left hr {
-  height: 1px;
-  background-color: #fff;
-}
-#icons-left .about p {
-  line-height: 1.7;
-  padding: 20px;
-  padding-top: 0;
-  padding-bottom: 5px;
-  font-size: 18px;
-  font-family: 'Libre Baskerville', serif;
-  font-weight: normal;
-}
-#icons-left .row {
-  margin-top: 20px;
-}
-#icons-left .box {
-  *zoom: 1;
-  border: 1px solid #ddd;
-  background-color: #fff;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  behavior: url(/js/libs/PIE.htc);
-  padding: 20px;
-  margin-bottom: 15px;
-}
-#icons-left .box:before,
-#icons-left .box:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-#icons-left .box:after {
-  clear: both;
-}
-#icons-left .box:before,
-#icons-left .box:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-#icons-left .box:after {
-  clear: both;
-}
-#icons-left .box h2 {
-  font-size: 24px;
-  text-align: center;
-}
-#icons-left .box img {
-  height: 100px;
-  float: left;
-  margin-right: 10px;
-}
-#icons-left .box.within {
-  width: 200px;
-  float: right;
-  border: none;
-  margin: 20px;
-  background-color: #eee;
-}
-#icons-left .box.within h3 {
-  font-size: 18px;
-}
 /* ==========================================================================
    Footer 
    ========================================================================== */
 footer {
   background-color: #111;
-  margin-top: 30px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  /* Height of the footer */
+
 }
 footer ul {
   list-style: none;
@@ -8276,15 +8237,11 @@ footer .logo a {
    Silver Bar 
    ========================================================================== */
 .section2 {
+  margin-top: 20px;
   padding-bottom: 20px;
 }
 .section2 h2 {
-  font-family: LinuxLibertine, arial;
-  font-family: Quicksand-Book, arial;
-  font-family: Nexa-Bold, arial;
-  color: #666;
-  color: #ec1c2d;
-  font-weight: normal;
+  color: #000;
   line-height: 1;
   *zoom: 1;
 }
@@ -8306,6 +8263,23 @@ footer .logo a {
 .section2 h2:after {
   clear: both;
 }
+.section2 .current-events {
+  border: 3px solid #000;
+  background: #111;
+  margin-top: 15px;
+  position: relative;
+  color: #fff;
+}
+.section2 .current-events h2 {
+  color: #fff;
+}
+.section2 .current-events h4 {
+  margin-top: 20px;
+  color: #fff;
+}
+.section2 .current-events a:hover {
+  color: #fff;
+}
 .section2 .header {
   padding: 20px;
   padding-bottom: 0;
@@ -8317,9 +8291,6 @@ footer .logo a {
 .section2 .span6 {
   margin-top: 20px;
 }
-.section2 .span6 .content {
-  background: #fff;
-}
 .section2 .news-icon {
   width: 75px;
   margin-right: 20px;
@@ -8330,311 +8301,59 @@ footer .logo a {
   float: left;
   margin-right: 20px;
 }
+.section2 .facebook-icon {
+  width: 25px;
+}
+.section2 .circle-icon {
+  width: 300px;
+  position: absolute;
+  z-index: -1;
+}
 .section2 .quotes {
   font-family: georgia;
   font-size: 30px;
   float: left;
   display: block;
+  line-height: .6;
 }
-.section2 .quotes-r {
-  font-family: georgia;
-  font-size: 30px;
-}
-.section2 .testimonials p {
+.section2 .testimonials blockquote {
+  font-size: 15px;
   margin-bottom: 30px;
+  line-height: 1.3;
+}
+.section2 .testimonials h2 {
+  line-height: 1;
+  font-weight: bold;
+}
+.section2 .testimonials .quote-from {
+  font-family: arial;
 }
 .section2 .testimonials .header {
   margin-bottom: 25px;
 }
-#icons-in-navbar .section2 {
-  background: url(/img/bg.png) repeat top left;
-  padding-bottom: 20px;
+.section2 .testimonials .span6 .span4 {
+  *zoom: 1;
 }
-#icons-in-navbar .section2 .divider {
-  background: url(/img/bg-module-top-shadow.png) no-repeat top center;
+.section2 .testimonials .span6 .span4:before,
+.section2 .testimonials .span6 .span4:after {
+  display: table;
+  content: "";
+  line-height: 0;
 }
-#icons-in-navbar .section2 .span6 {
-  margin-top: 20px;
+.section2 .testimonials .span6 .span4:after {
+  clear: both;
 }
-#icons-in-navbar .section2 .span6 .content {
-  padding: 0;
-  background: #fff;
-  border: 1px solid #ddd;
-  border: none;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
-  -webkit-box-shadow: 0 0px 0px rgba(0, 0, 0, 0.055);
-  -moz-box-shadow: 0 0px 0px rgba(0, 0, 0, 0.055);
-  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.055);
+.section2 .testimonials .span6 .span4:before,
+.section2 .testimonials .span6 .span4:after {
+  display: table;
+  content: "";
+  line-height: 0;
 }
-#icons-in-navbar .section2 .header {
-  background-color: #e61829;
-  background-image: -moz-linear-gradient(top, #ec1c2d, #dc1223);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ec1c2d), to(#dc1223));
-  background-image: -webkit-linear-gradient(top, #ec1c2d, #dc1223);
-  background-image: -o-linear-gradient(top, #ec1c2d, #dc1223);
-  background-image: linear-gradient(to bottom, #ec1c2d, #dc1223);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec1c2d', endColorstr='#ffdc1223', GradientType=0);
+.section2 .testimonials .span6 .span4:after {
+  clear: both;
 }
-#icons-in-navbar .section2 .body {
-  padding: 20px;
-}
-#icons-in-navbar .section2 h2 {
-  font-family: LinuxLibertine, arial;
-  font-weight: normal;
-  margin: 0;
-  color: #fff;
-  padding: 20px;
-}
-#icons-in-navbar .section2 .testimonials p {
-  font-size: 16px;
-  font-family: Quicksand-Book, arial;
-}
-#icons-in-navbar .section2 .current-events p {
-  font-family: LinuxLibertine, arial;
-}
-#silver-bar .icons {
-  padding: 10px 0;
-  background-color: #dadada;
-  background-image: -moz-linear-gradient(top, #eeeeee, #bbbbbb);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eeeeee), to(#bbbbbb));
-  background-image: -webkit-linear-gradient(top, #eeeeee, #bbbbbb);
-  background-image: -o-linear-gradient(top, #eeeeee, #bbbbbb);
-  background-image: linear-gradient(to bottom, #eeeeee, #bbbbbb);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffeeeeee', endColorstr='#ffbbbbbb', GradientType=0);
-}
-#silver-bar .icons img {
-  height: 39px;
-  margin-top: 10px;
-}
-#silver-bar .icons .span2 {
-  text-align: center;
-}
-#silver-bar .icons h2 {
-  font-weight: normal;
-  font-size: 16px;
-  margin-top: 0;
-  color: #fff;
-  color: #ec1c2d;
-}
-#silver-bar .icons .circle-bg {
-  width: 60px;
-  height: 60px;
-  background-color: #fff;
-  background-color: #ec1c2d;
-  border-radius: 115px;
-  margin: 0 auto;
-}
-#silver-bar .philosophy {
-  background-color: #fafafa;
-  background-image: -moz-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f7f7f7), to(#ffffff));
-  background-image: -webkit-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: -o-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: linear-gradient(to bottom, #f7f7f7, #ffffff);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff7f7f7', endColorstr='#ffffffff', GradientType=0);
-  padding-bottom: 50px;
-}
-#silver-bar .philosophy h1 {
-  text-align: center;
-  font-family: LinuxLibertine, arial;
-  font-weight: normal;
-}
-#silver-bar .philosophy .rb {
-  height: 200px;
-  float: left;
-  margin-right: 20px;
-}
-#silver-bar .philosophy p {
-  margin: 0 auto;
-  line-height: 1.7;
-  font-size: 18px;
-  font-family: 'Libre Baskerville', serif;
-  font-weight: normal;
-}
-#red-icons-on-black .icons {
-  background-color: #161616;
-  background-image: -moz-linear-gradient(top, #222222, #040404);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#040404));
-  background-image: -webkit-linear-gradient(top, #222222, #040404);
-  background-image: -o-linear-gradient(top, #222222, #040404);
-  background-image: linear-gradient(to bottom, #222222, #040404);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff040404', GradientType=0);
-  padding: 10px 0;
-}
-#red-icons-on-black .icons img {
-  height: 39px;
-  margin-top: 10px;
-}
-#red-icons-on-black .icons .span2 {
-  text-align: center;
-}
-#red-icons-on-black .icons h2 {
-  font-weight: normal;
-  font-size: 16px;
-  margin-top: 0;
-  color: #fff;
-  color: #ec1c2d;
-}
-#red-icons-on-black .icons .circle-bg {
-  width: 60px;
-  height: 60px;
-  background-color: #fff;
-  background-color: #ec1c2d;
-  border-radius: 115px;
-  margin: 0 auto;
-}
-#red-icons-on-black .philosophy {
-  background-color: #fafafa;
-  background-image: -moz-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f7f7f7), to(#ffffff));
-  background-image: -webkit-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: -o-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: linear-gradient(to bottom, #f7f7f7, #ffffff);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff7f7f7', endColorstr='#ffffffff', GradientType=0);
-  padding-bottom: 50px;
-}
-#red-icons-on-black .philosophy h1 {
-  text-align: center;
-  font-family: LinuxLibertine, arial;
-  font-weight: normal;
-}
-#red-icons-on-black .philosophy .rb {
-  height: 200px;
-  float: left;
-  margin-right: 20px;
-}
-#red-icons-on-black .philosophy p {
-  margin: 0 auto;
-  line-height: 1.7;
-  font-size: 18px;
-  font-family: 'Libre Baskerville', serif;
-  font-weight: normal;
-}
-#red-icon-bar .icons {
-  background-color: #e61829;
-  background-image: -moz-linear-gradient(top, #ec1c2d, #dc1223);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ec1c2d), to(#dc1223));
-  background-image: -webkit-linear-gradient(top, #ec1c2d, #dc1223);
-  background-image: -o-linear-gradient(top, #ec1c2d, #dc1223);
-  background-image: linear-gradient(to bottom, #ec1c2d, #dc1223);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec1c2d', endColorstr='#ffdc1223', GradientType=0);
-  padding: 10px 0;
-}
-#red-icon-bar .icons img {
-  height: 39px;
-  margin-top: 10px;
-}
-#red-icon-bar .icons .span2 {
-  text-align: center;
-}
-#red-icon-bar .icons h2 {
-  font-weight: normal;
-  font-size: 16px;
-  margin-top: 0;
-  color: #fff;
-}
-#red-icon-bar .icons .circle-bg {
-  width: 60px;
-  height: 60px;
-  background-color: #fff;
-  background-color: #ec1c2d;
-  border-radius: 115px;
-  margin: 0 auto;
-}
-#red-icon-bar .philosophy {
-  background-color: #fafafa;
-  background-image: -moz-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f7f7f7), to(#ffffff));
-  background-image: -webkit-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: -o-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: linear-gradient(to bottom, #f7f7f7, #ffffff);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff7f7f7', endColorstr='#ffffffff', GradientType=0);
-  padding-bottom: 50px;
-}
-#red-icon-bar .philosophy h1 {
-  text-align: center;
-  font-family: LinuxLibertine, arial;
-  font-weight: normal;
-}
-#red-icon-bar .philosophy .rb {
-  height: 200px;
-  float: left;
-  margin-right: 20px;
-}
-#red-icon-bar .philosophy p {
-  margin: 0 auto;
-  line-height: 1.7;
-  font-size: 18px;
-  font-family: 'Libre Baskerville', serif;
-  font-weight: normal;
-}
-#icons-in-navbar .icons {
-  padding: 10px 0;
-}
-#icons-in-navbar .icons li {
-  text-align: center;
-  margin: 0 15px;
-}
-#icons-in-navbar .icons li img {
-  height: 29px;
-}
-#icons-in-navbar .icons .span2 {
-  text-align: center;
-}
-#icons-in-navbar .icons h2 {
-  font-weight: normal;
-  font-size: 14px;
-  margin-top: 0;
-  margin-bottom: 0;
-  color: #fff;
-}
-#icons-in-navbar .icons .circle-bg {
-  width: 60px;
-  height: 60px;
-  background-color: #fff;
-  background-color: #ec1c2d;
-  border-radius: 115px;
-  margin: 0 auto;
-}
-#icons-in-navbar .philosophy {
-  background-color: #fafafa;
-  background-image: -moz-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f7f7f7), to(#ffffff));
-  background-image: -webkit-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: -o-linear-gradient(top, #f7f7f7, #ffffff);
-  background-image: linear-gradient(to bottom, #f7f7f7, #ffffff);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff7f7f7', endColorstr='#ffffffff', GradientType=0);
-  padding-bottom: 50px;
-}
-#icons-in-navbar .philosophy h1 {
-  text-align: center;
-  font-family: LinuxLibertine, arial;
-  font-weight: normal;
-}
-#icons-in-navbar .philosophy .rb {
-  height: 200px;
-  float: left;
-  margin-right: 20px;
-}
-#icons-in-navbar .philosophy p {
-  margin: 0 auto;
-  line-height: 1.7;
-  font-size: 18px;
-  font-family: 'Libre Baskerville', serif;
-  font-weight: normal;
+.section2 .testimonials.second {
+  margin-top: 28px;
 }
 /* ==========================================================================
    Home 
@@ -8669,8 +8388,6 @@ footer .logo a {
 }
 #home .philosophy h1 {
   text-align: center;
-  font-family: LinuxLibertine, arial;
-  font-weight: normal;
 }
 #home .philosophy .rb {
   height: 200px;
@@ -8777,4 +8494,36 @@ footer .logo a {
   font-size: 18px;
   font-family: 'Libre Baskerville', serif;
   font-weight: normal;
+}
+/* ==========================================================================
+   form-signin 
+   ========================================================================== */
+body.login,
+body.signup {
+  background: #f5f5f5;
+}
+.form-signin {
+  max-width: 300px;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  margin-top: 50px;
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 10px;
+}
+.form-signin input[type="text"],
+.form-signin input[type="password"] {
+  font-size: 16px;
+  height: auto;
+  margin-bottom: 15px;
+  padding: 7px 9px;
 }
