products page done

--- a/public/templates/products/subnav.html
+++ b/public/templates/products/subnav.html
@@ -1,6 +1,14 @@
+<div class="container">
 <ul class="nav nav-pills">
   <li><a href="#" data-target="espresso-machines">Espresso Machines</a></li>
   <li><a href="#" data-target="espresso-grinders">Grinders</a></li>
   <li><a href="#" data-target="juicers">Juicers</a></li>
   <li><a href="#" data-target="panini-grills">Panini Grills</a></li>
+  <li><a href="#" data-target="gelato">Gelato</a></li>
+  <li><a href="#" data-target="pizza-ovens">Pizza Ovens</a></li>
+  <li><a href="#" data-target="pasta-machines">Pasta Machines</a></li>
+  <li><a href="#" data-target="meat-slicers">Meat Slicers</a></li>
+  <li><a href="#" data-target="hot-chocolate">Hot Chocolate</a></li>
+  <li><a href="#" data-target="mixers">Mixers</a></li>
 </ul>
+</div>
