--- a/public/css/main.less
+++ b/public/css/main.less
@@ -666,3 +666,306 @@ body.login, body.signup {
   padding: 7px 9px;
 }
 
+/* ==========================================================================
+   Misc 
+   ========================================================================== */
+
+.product {
+  h1 {
+    color:#666;
+    font-family:Arial,Helvetica,sans-serif;
+    letter-spacing:4px;
+    //text-transform:uppercase;
+    text-align: center;
+    font-size: 50px;
+    margin: 20px 0;
+    font-family: 'Calluna', serif;  
+    font-weight: normal; 
+    line-height: 1.2;
+  }
+  img.main {
+    float: right;
+    margin-left: 15px;
+  }
+  .description {
+    margin-bottom: 25px; 
+  }
+  .pdf {
+    border: 1px solid #f7f7f7; 
+  }
+}
+
+.product-pdf a {
+	text-decoration: none;
+}
+.product-pdf a:hover {
+	text-decoration: underline;
+}
+
+.product-details-grid dt {
+	float:left;
+	font-weight:bold;
+	margin-bottom:6px;
+	width:140px;
+}
+
+
+.items {  
+  margin-top: 10px;
+  h1 {
+    font-size: 54px;
+    margin: 20px 0 0 0;
+    line-height: 1.2;
+  }
+  .lead {
+    margin-bottom: 18px;
+    font-weight: 300;
+  }
+  .section {
+    h1 {
+      font-size: 30px; 
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 10px;
+    }
+    h2 {
+      color:#666;
+      font-size: 24px;
+      margin-bottom: 25px;
+      margin-top: 15px;
+      line-height: 1.2;
+    }
+    ul {
+      overflow: auto;
+      list-style: none;
+      margin-top: 35px;
+    }
+    li {
+      float: left;
+      width: 175px;
+      margin: 0 20px;
+      margin-bottom: 15px;
+      display: inline;
+      border: 4px solid white;
+      text-align: center;
+      position: relative;
+      a {
+        &:hover {
+          text-decoration: none;
+        }
+      }
+      &:hover {
+        cursor: pointer;
+        border:4px solid #5FBDFF !important;
+      }
+      .hover-options {
+        position: absolute; 
+        top: 0;
+        right: 0;
+        background: white;
+        border: 1px solid #CCC;
+        padding: 3px;
+      }
+    }
+    .title {
+      font-size: 18px;
+      font-weight: bold;
+      margin: .3em;
+      display: block;
+      height: 50px;
+      overflow: hidden;
+    }
+  }
+}
+
+
+.page-header {
+  padding: 7px 14px;
+  margin: 0 0 18px;
+  border: 1px solid #DDD;
+  background-color: #FBFBFB;
+  #gradient > .vertical(#fff, #f5f5f5);
+  .box-shadow(0 1px 5px rgba(0, 0, 0, 0.1));
+  //margin-top: -18px;
+  h3 {
+    font-weight: normal;
+    margin-top: 0; 
+    margin-bottom: 0; 
+    text-shadow: 1px 1px #fff;
+  }
+}
+
+
+.thumbs {
+  list-style: none;    
+  &>li {
+    float: left; 
+    margin-right: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #eaeaea;
+    text-align: center;
+    .pdf {
+      border: 1px solid #f7f7f7; 
+    }
+    .actions {
+      text-align: center;
+      a {
+        margin:0 10px;
+      }
+      .pretend-thumb {
+        padding-top: 8px;
+        padding-bottom: 8px;
+        margin-top: 2px;
+        margin-bottom: 2px;
+        margin: 0;
+        line-height: 14px;
+      }
+    }
+  }
+}
+
+
+.thumbnail-wrapper {
+  height: 155px; 
+  width: 175px;
+  text-align: center;
+  display: block;
+}
+
+.contextual-menu {
+  .clearfix;
+  float: left;
+  margin: 0;
+  margin-top: 15px;
+  list-style: none;
+  li {
+    float: left; 
+    margin-left: 10px;
+  }  
+}
+
+.pdfCaption {
+  .edit {
+    display: none;
+  } 
+  .edit .display {
+    display: none; 
+  } 
+}
+
+.editing .caption-input {
+  //position: absolute;  
+}
+
+.editing .pdfCaption .display,
+.pdfCaption .edit {
+  display: none;
+}
+
+.editing .pdfCaption .edit {
+  display: block;
+}
+
+/* Subnav */
+.subnav {
+  //width: 100%;
+ // margin-top: -18px;
+  margin: 10px 0 50px 0; 
+  height: 36px;
+  background-color: #eeeeee; /* Old browsers */
+  background-repeat: repeat-x; /* Repeat the gradient */
+  background-image: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* FF3.6+ */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#eeeeee)); /* Chrome,Safari4+ */
+  background-image: -webkit-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Chrome 10+,Safari 5.1+ */
+  background-image: -ms-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* IE10+ */
+  background-image: -o-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Opera 11.10+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
+  background-image: linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* W3C */
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+
+
+
+.subnav .nav {
+  margin-bottom: 0;
+}
+.subnav .nav > li > a {
+  margin: 0;
+  padding-top:    11px;
+  padding-bottom: 11px;
+  border-left: 1px solid #f5f5f5;
+  border-right: 1px solid #e5e5e5;
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+}
+.subnav .nav > .active > a,
+.subnav .nav > .active > a:hover {
+  padding-left: 13px;
+  color: #777;
+  background-color: #e9e9e9;
+  border-right-color: #ddd;
+  border-left: 0;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
+     -moz-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
+          box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
+}
+.subnav .nav > .active > a .caret,
+.subnav .nav > .active > a:hover .caret {
+  border-top-color: #777;
+}
+.subnav .nav > li:first-child > a,
+.subnav .nav > li:first-child > a:hover {
+  border-left: 0;
+  padding-left: 12px;
+  -webkit-border-radius: 4px 0 0 4px;
+     -moz-border-radius: 4px 0 0 4px;
+          border-radius: 4px 0 0 4px;
+}
+.subnav .nav > li:last-child > a {
+  border-right: 0;
+}
+.subnav .dropdown-menu {
+  -webkit-border-radius: 0 0 4px 4px;
+     -moz-border-radius: 0 0 4px 4px;
+          border-radius: 0 0 4px 4px;
+}
+
+/* Fixed subnav on scroll, but only for 980px and up (sorry IE!) */
+//@media (min-width: 980px) {
+  .subnav-fixed {
+    position: fixed;
+    margin-top: 0;
+    top: 0px;
+    left: 0;
+    right: 0;
+    z-index: 1030;
+    border-color: #d5d5d5;
+    border-width: 0 0 1px; /* drop the border on the fixed edges */
+    -webkit-border-radius: 0;
+       -moz-border-radius: 0;
+            border-radius: 0;
+    -webkit-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+       -moz-box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+            box-shadow: inset 0 1px 0 #fff, 0 1px 5px rgba(0,0,0,.1);
+  }
+  .subnav-fixed .nav {
+    //width: 938px;
+    margin: 0 auto;
+    padding: 0 1px;
+  }
+  .subnav .nav > li:first-child > a,
+  .subnav .nav > li:first-child > a:hover {
+    -webkit-border-radius: 0;
+       -moz-border-radius: 0;
+            border-radius: 0;
+  }
+//}
+.subnav .nav {
+  //width: 938px;
+  //margin: 0 auto;
+  //padding: 0 1px;
+}
+
