--- a/views/nav.jade
+++ b/views/nav.jade
@@ -3,7 +3,7 @@
     .container
       a.brand(href="/") 
         img.logo(src="/img/logo.png")
-      ul.nav
+      ul.nav.main
         li: a(href="/products") Products 
         li: a(href="/about") About 
         li: a(href="/contact") Contact 
