NRA show tomorrw

--- a/public/templates/products/product.mustache
+++ b/public/templates/products/product.mustache
@@ -8,7 +8,7 @@
       <ul class="thumbnails">
         {{#pdfs}}
         <li style="width: 187px">
-          <h4>{{caption}}</h4>
+          <p><b>{{caption}}</b></p>
             <a href="/product-pdfs/{{name}}" class="thumbnail" target='_blank'>
               <span class="thumbnail-wrapper">
                 <img src="/product-pdfs/{{thumb}}" class="pdf"/>
