--- a/views/section2.jade
+++ b/views/section2.jade
@@ -9,6 +9,29 @@
           .body
             blockquote.
               <b class="quotes">&ldquo;</b>
+              Our espresso machine needed service at 4:30pm on a Friday 
+              afternoon over the holidays during ‘Grinchmas’, our largest 
+              event of the year. Leo arrived within the hour, and not only 
+              fixed our machine, but stayed for an additional hour to make 
+              sure everything ran smoothly during our event. Now that is 
+              customer service!
+              <br />- <b class="quote-from">Roy Nakano - Director of Facilities and Distribution, Revenue Operations
+              <br /><a href="http://www.nbcuni.com/">NBC Universal Studios</a></b>
+            //blockquote.
+              <b class="quotes">&ldquo;</b>
+              We have been working with Rosito Bisani for almost 15 years. 
+              They have done a great job in providing great espresso equipment 
+              and excellent service to our customers all over the country.
+              <br />- <b class="quote-from"><a href="#">USF</a></b>
+            blockquote.
+              <b class="quotes">&ldquo;</b>
+              Rosito Bisani has done an outstanding job in handling 
+              our specialty coffee program needs. Great equipment and great 
+              service!
+              <br />- <b class="quote-from">Kelly G. Mullarney - WAFFLE INNOVATOR  
+              <br /><a href="http://bruxie.com/">Bruxie - Gourmet Waffle Sandwiches</a></b>
+            blockquote.
+              <b class="quotes">&ldquo;</b>
               In 2008 Jeff, the service manager in the East, TWICE delivered 
               and installed espresso machines for us (with some assistance from 
               our staff) while on crutches just 1 week after surgery to repair his 
@@ -21,28 +44,7 @@
               with these guys ever since!
               <br />- <b class="quote-from">Spencer Curtiss - Operations Manager  
               <br /><a href="http://saxbyscoffee.com">Saxbys Coffee</a></b>
-            //blockquote.
-              <b class="quotes">&ldquo;</b>
-              Rosito Bisani has done an outstanding job in handling 
-              our specialty coffee program needs. Great equipment and great 
-              service!
-              <br />- <b><a href="#">Bruxie</a></b>
-            blockquote.
-              <b class="quotes">&ldquo;</b>
-              Our espresso machine needed service at 4:30pm on a Friday 
-              afternoon over the holidays during ‘Grinchmas’, our largest 
-              event of the year. Leo arrived within the hour, and not only 
-              fixed our machine, but stayed for an additional hour to make 
-              sure everything ran smoothly during our event. Now that is 
-              customer service!
-              <br />- <b class="quote-from">Roy Nakano - Director of Facilities and Distribution, Revenue Operations
-              <br /><a href="#">Universal Studios</a></b>
-            blockquote.
-              <b class="quotes">&ldquo;</b>
-              We have been working with Rosito Bisani for almost 15 years. 
-              They have done a great job in providing great espresso equipment 
-              and excellent service to our customers all over the country.
-              <br />- <b class="quote-from"><a href="#">USF</a></b>
+
       .span5
         .current-events
           //img(src="/img/circle.png", class="circle-icon")
