--- a/public/css/main.less
+++ b/public/css/main.less
@@ -129,10 +129,10 @@ form .btn {
   }
   .body {
     p {
-      font-size: 28px;
+      //font-size: 28px;
     }
     b {
-      font-size: 24px;
+      //font-size: 24px;
     }
   }
 }
@@ -780,7 +780,7 @@ body.login, body.signup {
 
 .page-header {
   padding: 7px 14px;
-  margin: 0 0 18px;
+  margin: 15px 0 18px;
   border: 1px solid #DDD;
   background-color: #FBFBFB;
   #gradient > .vertical(#fff, #f5f5f5);
