--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7967,6 +7967,7 @@ html {
   height: 100%;
 }
 body {
+  line-height: 1.3;
   min-height: 100%;
   position: relative;
 }
@@ -8522,6 +8523,29 @@ body.signup {
   padding: 7px 9px;
 }
 /* ==========================================================================
+   About 
+   ========================================================================== */
+body.about {
+  background: #f5f5f5;
+}
+.about .content {
+  padding: 40px;
+  margin: 0 auto;
+  margin-top: -32px;
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+.about p {
+  font-size: 16px;
+  line-height: 1.5;
+}
+/* ==========================================================================
    Misc 
    ========================================================================== */
 .product h1 {
@@ -8620,6 +8644,7 @@ body.signup {
   overflow: hidden;
 }
 .page-header {
+  position: relative;
   padding: 7px 14px;
   margin: 15px 0 18px;
   border: 1px solid #DDD;
