--- a/public/css/main.less
+++ b/public/css/main.less
@@ -66,6 +66,7 @@ html {
 }
 
 body {
+  line-height: 1.3;
   // to sticky footer to bottom 
   min-height:100%;
   position:relative;
@@ -667,6 +668,34 @@ body.login, body.signup {
 }
 
 /* ==========================================================================
+   About 
+   ========================================================================== */
+body.about {
+  background: #f5f5f5;
+}
+.about .content {
+  //max-width: 300px;
+  padding: 40px;
+  margin: 0 auto;
+  margin-top: -32px;
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+          box-shadow: 0 1px 2px rgba(0,0,0,.05);
+}
+
+.about p {
+  //font-family: LinuxLibertine, arial;
+  //font-family: 'Libre Baskerville', serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+/* ==========================================================================
    Misc 
    ========================================================================== */
 
@@ -779,6 +808,7 @@ body.login, body.signup {
 
 
 .page-header {
+  position: relative;
   padding: 7px 14px;
   margin: 15px 0 18px;
   border: 1px solid #DDD;
