--- a/views/contact.jade
+++ b/views/contact.jade
@@ -1,23 +1,40 @@
 #contact
   .container
-    .content.body
-      .page-header: h1 Contact
-      .row
-        .span4
-          p Rosito Bisani Imports, Inc.
-          p.
-            <b>Address</b><br />
-            940 S. La Brea Avenue<br />
-            Los Angeles, CA 90036
-          p.
-            <b>Phone</b><br />
-            1-800-848-4444
-            610.647.0200
-          p.
-            <b>Email:</b><br />
-            sales@rosito-bisani.com
-          p.
-            <b>Fax:</b><br />
-            323-938-0728
-        .span4.well.contact
+    .page-header: h1 Contact
+    .row
+      .span2.offset1
+        h3 West 
+        p.
+          <b>Address</b><br />
+          940 S. La Brea Avenue<br />
+          Los Angeles, CA 90036
+        p.
+          <b>Phone Main</b><br />
+            323-937-1888
+        p.
+          <b>Toll Free</b><br />
+             1-800-848-4444
+        p.
+          <b>Fax:</b><br />
+          323-938-0728
+      .span3
+        h3 East
+        p.
+          <b>Address</b><br />
+          530 S. Henderson Rd.<br />
+          Suite F<br />
+          King of Prussia, PA 19406<br />
+        p.
+          <b>Phone Main</b><br />
+          610.265.5950
+        p.
+          <b>Toll Free</b><br />
+          1.800.215.8563
+        p.
+          <b>Fax:</b><br />
+          888.576.8524
+      .span4
+        h3 Email:
+        p sales@rosito-bisani.com
+        .well.contact
 
