some work on the mobile layout

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8209,6 +8209,9 @@ form span.error {
   font-size: 13px;
   color: #111;
 }
+.navbar .btn-navbar {
+  padding: 14px 15px;
+}
 /* ==========================================================================
    Carousel 
    ========================================================================== */
@@ -8857,4 +8860,39 @@ body.about {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
+}
+/* ==========================================================================
+   Responsive 
+   ========================================================================== */
+/* Large desktop */
+@media (min-width: 1200px) {
+  
+}
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) {
+  
+}
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {
+  body {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .container {
+    padding: 0 10px;
+  }
+  .icons .span2 {
+    float: left;
+    width: 100px;
+  }
+  .navbar-static-top {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {
+  .navbar .contact-numbers {
+    margin-top: 0;
+  }
 }
