--- a/views/nav.jade
+++ b/views/nav.jade
@@ -1,13 +1,20 @@
 .navbar.navbar-static-top
   .navbar-inner
     .container
+      a.btn.btn-navbar(data-toggle="collapse", data-target=".nav-collapse")
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
       a.brand(href="/") 
         img.logo(src="/img/logo.png")
-      ul.nav.main
-        li: a(href="/products") Products 
-        li: a(href="/about") About 
-        li: a(href="/contact") Contact 
+      .nav-collapse.collapse
+        ul.nav.main
+          li: a(href="/products") Products 
+          li: a(href="/about") About 
+          li: a(href="/contact") Contact 
       ul.nav.user-menu.pull-right
       ul.pull-right.contact-numbers  
         li West Coast Support: 1-800-848-4444
         li East Coast Support: 1-800-215-8563
+
+
