--- a/views/footer.jade
+++ b/views/footer.jade
@@ -5,11 +5,11 @@ footer
         a(href="/")
           img(src="/img/logo-white.png")
       li
-        a(href="/") Products
+        a(href="/products") Products
       li
-        a(href="/") About
+        a(href="/about") About
       li
-        a(href="/") Contact
+        a(href="/contact") Contact
       li.pull-right.copyright
         | All rights reserved. 
         - var year = new Date().getFullYear()
