--- a/views/section2.jade
+++ b/views/section2.jade
@@ -66,10 +66,21 @@
         //img(src="/img/bg-module-top-shadow.png")
         .testimonials.second
           .body
-            blockquote.
+            //blockquote.
               <b class="quotes">&ldquo;</b>
               The most important pieces of equipment in our kitchen were 
               purchased from Rosito Bisani. Our pasta business relies on the 
               CPG2 and TR110 and we couldn’t be happier!
               <br />- <b class="quote-from"><a href="#">Terroni</a></b>
+            blockquote.
+              <b class="quotes">&ldquo;</b>
+              Working closely with RBE for equipment needs and service support 
+              has been an incredible benefit to our wholesale partners. Their 
+              knowledge and responsiveness provide great peace of mind.
+              <br />- <b class="quote-from">Rob Altieri - Sales Director  
+              <br /><a href="http://www.onevillagecoffee.com">One Village Coffee</a></b>
+
+
+
+
 
