change current event

--- a/views/section2.jade
+++ b/views/section2.jade
@@ -52,10 +52,10 @@
             img(class="news-icon", src="/img/news-icon.png")
             h2 Current Events
           .body
-            h4 Upcoming Shows
+            h4 Our New Website Is Live
             p.
-              <b><a href="http://show.restaurant.org/Home">NRA Show</a></b> <br />May 18-21 - 
-              McCormick Place, Booth 233 <br />Chicago, IL 
+              Check back in the coming weeks as we continue to add and improve available resources.
+            h4 Upcoming Shows
             p.
               <b><a href="http://www.westernfoodexpo.com/For-Exhibitors/Already-Exhibiting/Space-Selection/">Western 
                 Foodservice and Hospitality Expo</a></b> <br /> August 18-20 - Los Angeles Convention Center <br />Los Angeles, CA
