--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,6 +23,18 @@ html(lang="en")
     else 
       script(data-main='/js/main', src='/js/libs/require.js')
 
+    script
+      var _prum = [['id', '51b0ca1eabe53d4277000000'],
+                   ['mark', 'firstbyte', (new Date()).getTime()]];
+      (function() {
+          var s = document.getElementsByTagName('script')[0]
+            , p = document.createElement('script');
+          p.async = 'async';
+          p.src = '//rum-static.pingdom.net/prum.min.js';
+          s.parentNode.insertBefore(p, s);
+      })();
+    
+
   body
     include nav
     #notification
