added home link to navbar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8197,14 +8197,14 @@ form span.error {
   padding-left: 32px;
   margin-top: 14px;
 }
-.navbar .user-menu {
+.navbar .user-menu-inner {
   margin-top: 15px;
   margin-left: 30px;
 }
-.user-menu .btn {
+.user-menu-inner .btn {
   float: left;
 }
-.navbar .user-menu li a {
+.navbar .user-menu-inner li a {
   padding: 10px;
   font-size: 13px;
   color: #111;
