--- a/public/css/main.less
+++ b/public/css/main.less
@@ -263,16 +263,16 @@ form {
   margin-top: 14px;
 }
 
-.navbar .user-menu {
+.navbar .user-menu-inner {
   margin-top: 15px;
   margin-left: 30px;
 }
 
-.user-menu .btn {
+.user-menu-inner .btn {
   float: left;
 }
 
-.navbar .user-menu li a {
+.navbar .user-menu-inner li a {
   padding: 10px;
   font-size: 13px;
   color: #111;
