--- a/views/footer.jade
+++ b/views/footer.jade
@@ -5,6 +5,8 @@ footer
         a(href="/")
           img(src="/img/logo-white.png")
       li
+        a(href="/") Home
+      li
         a(href="/products") Products
       li
         a(href="/about") About
