--- a/views/nav.jade
+++ b/views/nav.jade
@@ -9,6 +9,7 @@
         img.logo(src="/img/logo.png")
       .nav-collapse.collapse
         ul.nav.main
+          li: a(href="/") Home 
           li: a(href="/products") Products 
           li: a(href="/about") About 
           li: a(href="/contact") Contact 
