--- a/public/templates/products/subnav.html
+++ b/public/templates/products/subnav.html
@@ -1,7 +1,7 @@
 <div class="container">
 <ul class="nav nav-pills">
-  <li><a href="#" data-target="espresso-machines">Espresso Machines</a></li>
-  <li><a href="#" data-target="espresso-grinders">Grinders</a></li>
+  <li><a href="?section=espresso-machines" data-target="espresso-machines">Espresso Machines</a></li>
+  <li><a href="?section=espresso-grinders" data-target="espresso-grinders">Grinders</a></li>
   <li><a href="#" data-target="pizza-ovens">Pizza Ovens</a></li>
   <li><a href="#" data-target="pasta-machines">Pasta Machines</a></li>
   <li><a href="#" data-target="gelato">Gelato</a></li>
