--- a/views/nav.jade
+++ b/views/nav.jade
@@ -13,7 +13,7 @@
           li: a(href="/products") Products 
           li: a(href="/about") About 
           li: a(href="/contact") Contact 
-      ul.nav.user-menu.pull-right
+      .user-menu.pull-right
       ul.pull-right.contact-numbers  
         li West Coast Support: 1-800-848-4444
         li East Coast Support: 1-800-215-8563
